tests/baselines/reference/iterableArrayPattern14(strict=true).errors.txt
iterableArrayPattern14.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
iterableArrayPattern14.ts(2,25): error TS7008: Member 'y' implicitly has an 'any' type.
iterableArrayPattern14.ts(16,18): error TS7031: Binding element 'a' implicitly has an 'any' type.
iterableArrayPattern14.ts(16,24): error TS7031: Binding element 'b' implicitly has an 'any' type.


==== iterableArrayPattern14.ts (4 errors) ====
    class Bar { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo extends Bar { y }
                            ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    function fun(...[a, ...b]) { }
                     ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
                           ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
    fun(new FooIterator);